mysql_deployment_manif.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: mydb
  labels:
    app: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-deployment-container
          image: 544378344870.dkr.ecr.us-east-1.amazonaws.com/clo835-week4:mysql
          ports:
            - containerPort: 3306
      dnsPolicy: ClusterFirst
      restartPolicy: Always
