mysql_pod_manif.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
spec:
  containers:
    - name: mysql-container
      image: 544378344870.dkr.ecr.us-east-1.amazonaws.com/clo835-week4:mysql
      ports:
        - containerPort: 3306
