webapp_deployment_manif.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: myapp
  labels:
    app: employees
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employees
  template:
    metadata:
      labels:
        app: employees
    spec:
      containers:
        - name: myapp-deployment-container
          image: 544378344870.dkr.ecr.us-east-1.amazonaws.com/clo835-week4:app
          ports:
            - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
