webapp_deployment_v2__manif.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v2-deployment
  namespace: myapp
  labels:
    app: employees
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: employees
      version: v2
  template:
    metadata:
      labels:
        app: employees
        version: v2
    spec:
      containers:
        - name: myapp-deployment-container
          image: 544378344870.dkr.ecr.us-east-1.amazonaws.com/clo835-week4:app2
          ports:
            - containerPort: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
