webapp_pod_manif.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: myapp
  labels:
    my_maniType: pod
spec:
  containers:
    - name: myappcontainer
      image: 544378344870.dkr.ecr.us-east-1.amazonaws.com/clo835-week4:app
      ports:
        - containerPort: 80
