mysql_service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mydb
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
