webapp_service_v2_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-v2-service
  namespace: myapp
spec:
  selector:
    app: employees
    version: v2
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
