myapp_ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-v1
spec:
  rules:
  - host: xmtang1-website
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: app-service-v1
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-v2
spec:
  rules:
  - host: your-website-here
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: app-service-v2
            port:
              number: 80
